<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="clear_all">AC</string>
    <string name="parentheses">(  )</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="pow">^</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ctan">ctan</string>
    <string name="sqrt">sqrt</string>
    <string name="log">log</string>
    <string name="prosent">%</string>

    <string name="result">0</string>
</resources>