<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tvsec"
        android:autofillHints="false"
        android:inputType="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_weight="2"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvmain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:text=""
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textAlignment="viewEnd"
        android:padding="10dp"
        android:gravity="bottom"
        android:maxLines="1"
        android:layout_weight="1"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@color/gray"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/bac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/clear_all"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="#3A3A3A" />

                    <Button
                        android:id="@+id/bc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/clear"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        android:textColor="#3A3A3A" />

                    <Button
                        android:id="@+id/bbrakes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/parentheses"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="#3A3A3A"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/bsin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sin"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                    <Button
                        android:id="@+id/bcos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cos"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                    <Button
                        android:id="@+id/btan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tan"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange"/>

                    <Button
                        android:id="@+id/bctan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ctan"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/blog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/log"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                    <Button
                        android:id="@+id/bsquare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pow"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                    <Button
                        android:id="@+id/bsqrt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sqrt"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                    <Button
                        android:id="@+id/bper"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prosent"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/b7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="7"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/b8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="8"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/b9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="9"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/bdiv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/divide"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/b4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="4"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/b5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="5"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/b6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="6"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/bmul"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/multiply"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/b1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="1"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/b2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="2"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/b3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="3"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/bminus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/minus"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/bdot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/point"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/b0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/bequal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/equals"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/orange"
                        android:textColor="@color/white"/>

                    <Button
                        android:id="@+id/bplus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/add"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:textColor="@color/orange"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>